recursion.logo.koch.Koch.scala.error
Erreur de compilation :
Koch:1: error: Missing closing brace `}' assumed here
def snowFlake (levels:Int, length:Double) {
^Koch:1: error: expected class or object definition
def snowFlake (levels:Int, length:Double) {
^Koch:11: error: expected class or object definition
def snowSide(levels:Int, length:Double) {
^